--- a/research.html
+++ b/research.html
@@ -197,7 +197,7 @@
 
                 <a href="#">
 
-                    <img class="img-responsive" src="images/bioinformatics" alt="">
+                    <img class="img-responsive" src="images/bioinformatics.png" alt="">
 
                 </a>
 
@@ -210,7 +210,7 @@
                 <h4>Techinical Report</h4>
 
                 <p class="text-justify">
-                This paper is a case study of negative control in the discipline of motif 
+                This techinical report is a case study of negative control in the discipline of motif 
                 detection. Motif detection software relies heavily on negative control to
                 ﬁnd motifs in a given network.  Using mﬁnder results gathered from 
                 searching 3 to 5 node motifs using both graph randomization methods 
