--- a/research.html
+++ b/research.html
@@ -197,7 +197,7 @@
 
                 <a href="#">
 
-                    <img class="img-responsive" src="images/bioinformatics" alt="">
+                    <img class="img-responsive" src="images/bioinformatics.png" alt="">
 
                 </a>
 
