--- a/research.html
+++ b/research.html
@@ -102,7 +102,7 @@
 
                     <li>
 
-                        <a href="research.html">Research and Projects</a>
+                        <a href="research.html">Research & Projects</a>
 
                     </li>
 
