added new images

--- a/research.html
+++ b/research.html
@@ -156,11 +156,9 @@
 
             <div class="col-md-7">
 
-                <a href="#">
 
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                  <img class="img-responsive" src="images/daylighting.png" alt="">
 
-                </a>
 
             </div>
 
@@ -195,11 +193,9 @@
 
             <div class="col-md-7">
 
-                <a href="#">
 
-                    <img class="img-responsive" src="images/bioinformatics.png" alt="">
+                  <img class="img-responsive" src="images/bioinformatics.png" alt="">
 
-                </a>
 
             </div>
 
@@ -235,11 +231,9 @@
 
             <div class="col-md-7">
 
-                <a href="#">
 
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="images/powerstrip_header.png" alt="">
 
-                </a>
 
             </div>
 
