--- a/research.html
+++ b/research.html
@@ -138,7 +138,7 @@
 
             <div class="col-lg-12">
 
-                <h1 class="page-header">Research
+                <h1 class="page-header">Recent Works
 
                 </h1>
 
