--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="col-md-8">
               <h2>About me</h2>
               <p class="text-justify">
-              I'm currently a second year graduate student at <a href ="http://www.cs.rpi.edu/"> Rensselaer Polytechnic Institute</a> 
+              I'm currently a 4th year graduate student at <a href ="http://www.cs.rpi.edu/"> Rensselaer Polytechnic Institute</a> 
               pursuing a PhD in Computer Science.
               I received my Undergraduate Bachelors of Science at <a href="http://www.fairfield.edu/">Fairfield University</a> 
               in Computer Science and Mathematics.
